--- a/assets/src/sass/header.scss
+++ b/assets/src/sass/header.scss
@@ -1,23 +1,38 @@
-@mixin mixin-nav-bar ($backColor,$colorText,$sizeTitle,$sizeDesc){
-  width: 100%;
-  height: 80px;
-  padding: 10px;
-  background-color: $backColor;
-  min-height: 50px;
-  margin-bottom: 20px;
-  border: 1px solid $backColor;
-  color:$colorText;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  h1{
-    margin: 0;
-    font-size: $sizeTitle;
+header {
+  background-color: rgba(0,0,0,.5);
+  .navigation {
+    width: 100vw;
+    height: 65px; 
+    display: flex;
+    justify-content: flex-end;
+    ul {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 230px;
+      margin-right: 50px;
+      li {
+        flex: 1 1 auto;
+        height: 100%;
+        list-style: none;
+        a {
+          font-family: 'Crimson Text', serif;
+          font-size: 18px;
+          color: #fff5ce;
+          text-decoration: none;
+          text-transform: uppercase;
+          display: block;
+          height: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          transition: .3s;
+          border-bottom: 3px solid transparent;
+          &:hover {
+            border-bottom: 3px solid #fff5ce;
+          } 
+        }
+      }
+    }
   }
-  p{
-    font-size: $sizeDesc;
-    margin: 0;
-  }
-}
-
-.nav{
-  @include mixin-nav-bar(#CF4646,#fff,55px,18px);
 }
