--- a/assets/src/sass/missao.scss
+++ b/assets/src/sass/missao.scss
@@ -29,7 +29,7 @@
                 }
                 .score {
                     font-size: 50px;
-                    font-weight: bold;
+                    font-weight: normal;
                     text-transform: uppercase;
                     margin-top: 10px;
                     letter-spacing: 2px;
@@ -113,6 +113,91 @@
         flex: 0 1 430px;
         .unit-mobile {
             display: block;
+        }
+        .logo {
+            display: none;
+        }
+        .iframe-section {
+            width: fit-content;
+            display: flex;
+            justify-content: center;
+            position: relative;
+            max-width: 100%;
+            &:before {
+                content: '';
+                display: block;
+                width: 100%;
+                height: 100%;
+                position: absolute;
+                top: 0;
+                left: 0;
+                z-index: 9999;
+            }
+        }
+    }
+    @media(max-width: 1200px) {
+        .wrapper {
+            flex-wrap: wrap;
+            justify-content: center;
+            margin-top: 10px;
+            .left {
+                order: 2;
+                width: 100%;
+                flex: 1 1 100%;
+                .user {
+                    max-width: 230px;
+                    margin: 0 auto;
+                }
+            }
+            .center {
+                flex: 0 1 100%;
+                order: 3;
+                .recompensas {
+                    max-width: initial;
+                    width: 100%;
+                    background-position-x: center;
+                    background-size: 560px;
+                    margin-top: 50px;
+                    margin-bottom: 110px;
+                    &__main {
+                        max-width: 385px;
+                        padding: 0;
+                    }
+                }
+            }
+            .right {
+                flex-wrap: wrap;
+                order: 1;
+                .logo {
+                    display: block;
+                }
+            }
+        }
+    }
+    @media(max-width: 720px) {
+        .wrapper {
+            .left {
+                display: none;
+            }
+            .center {
+                .recompensas {
+                    background-size: contain;
+                    margin-top: 10px;
+                    margin-bottom: 30px;
+                    &__main {
+                        max-height: 175px;
+                        max-width: 270px;
+                    }
+                }
+            }
+            .right {
+                justify-content: center;
+                
+                iframe {
+                    position: relative;
+                    
+                }
+            }
         }
     }
 }
