--- a/assets/src/sass/index.scss
+++ b/assets/src/sass/index.scss
@@ -150,6 +150,7 @@
     .right {
       width: 100%;
       margin-top: 30px;
+      justify-content: center;
       iframe {
         &.unit-web {
           display: none;
